# Q-Former-Improvement

./: .gitignore  all_runs_summary.csv  bla.py  experiments_summary_statistics.csv  pyproject.toml  qformer_base_clip_metrics_run_lastest.csv  qformer_base_clip_summary_results.csv
configs/: config_qformer.json  config_qformer_base.json  config_qformer_base_generative.json  config_qformer_base_gqa.json  config_qformer_base_openended.json  config_qformer_h100_optimized.json  config_qformer_improved.json  config_qformer_improved_2xh100.json  config_qformer_improved_generative.json  config_qformer_improved_gqa.json  config_qformer_improved_h100.json  config_qformer_improved_openended.json  config_qformer_old_v1.json  config_qformer_optimized.json  config_qformer_v1.json
docs/: WANDB_USAGE.md
results/: qformer_base_clip_metrics_run0.csv  qformer_base_clip_summary_results.csv  qformer_improved_clip_metrics_run0.csv  qformer_improved_clip_summary_results.csv
scripts/: demo_visualization.py  demo_visualization_base.py  install_wandb.sh  run.py  run_gqa.py
src/datasets/: dataset.py  dataset_generative.py  dataset_gqa.py  dataset_openended.py  vqa_open_ended.py
src/functionals/: multi_head_attention.py
src/layers/: cross_modal_transformer.py  feed_forward.py  multi_head_cross_attention.py  multi_head_self_attention.py
src/model/: clip_vit.py  q_former.py  q_former_base.py  q_former_base_generative.py  q_former_base_openended.py  q_former_improved.py  q_former_improved_generative.py  q_former_improved_openended.py
tests/: test_clip_vit.py  test_qformer_improved.py
(+14 files in other folders)
