[project]
name = "proposal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "pytorch-lightning>=2.5.6",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "transformers>=4.57.1",
]
